--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "pandoc-templates"]
 	path = pandoc-templates
-	url = https://github.com/mwhite/pandoc-templates.git
+url=git@github.com:JervyShi/pandoc-templates.git
